force-app/main/default/objects/SapVistexAgreement__c/SapVistexAgreement__c.object-meta.xml
<CustomObject>
    <label>Pricing Agreements</label>
    <nameField>
        <label>Pricing Agreements</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>