force-app/main/default/objects/SapVistexAgreement__c/fields/AgreementEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementEffectiveDate__c</fullName>
    <label>Agreement Effective Date</label>
    <type>Date</type>
</CustomField>