force-app/main/default/objects/SapVistexAgreement__c/fields/AgreementExpireDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementExpireDate__c</fullName>
    <label>Agreement Expire Date</label>
    <type>Date</type>
</CustomField>