force-app/main/default/objects/SapVistexAgreement__c/fields/AgreementType__c.field-meta.xml
<CustomField>
    <fullName>AgreementType__c</fullName>
    <label>PA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>