force-app/main/default/objects/SapVistexAgreement__c/fields/ApplyLogging__c.field-meta.xml
<CustomField>
    <fullName>ApplyLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Logging</label>
    <type>Checkbox</type>
</CustomField>