force-app/main/default/objects/SapVistexAgreement__c/fields/ClearTemporaryRepository__c.field-meta.xml
<CustomField>
    <fullName>ClearTemporaryRepository__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary Repository Change</label>
    <type>Checkbox</type>
</CustomField>