force-app/main/default/objects/SapVistexAgreement__c/fields/DirectAccountLookup__c.field-meta.xml
<CustomField>
    <fullName>DirectAccountLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Purchaser Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Agreements</relationshipLabel>
    <relationshipName>Pricing_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>