force-app/main/default/objects/SapVistexAgreement__c/fields/DirectPrimaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>DirectPrimaryBusinessType__c</fullName>
    <formula>TEXT( DirectAccountLookup__r.Primary_Business_Type_New__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Primary Business Type</label>
    <type>Text</type>
</CustomField>