force-app/main/default/objects/SapVistexAgreement__c/fields/DirectSecondaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>DirectSecondaryBusinessType__c</fullName>
    <formula>TEXT( DirectAccountLookup__r.Secondary_Business_Type_New__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Secondary Business Type</label>
    <type>Text</type>
</CustomField>