force-app/main/default/objects/SapVistexAgreement__c/fields/DropShipAdjustmentFactor__c.field-meta.xml
<CustomField>
    <fullName>DropShipAdjustmentFactor__c</fullName>
    <label>Drop Ship Adjustment Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>