force-app/main/default/objects/SapVistexAgreement__c/fields/DropShipEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DropShipEffectiveDate__c</fullName>
    <label>Drop Ship Effective Date</label>
    <type>Date</type>
</CustomField>