force-app/main/default/objects/SapVistexAgreement__c/fields/DropShipExpireDate__c.field-meta.xml
<CustomField>
    <fullName>DropShipExpireDate__c</fullName>
    <label>Drop Ship Expire Date</label>
    <type>Date</type>
</CustomField>