force-app/main/default/objects/SapVistexAgreement__c/fields/DropShipIndicator__c.field-meta.xml
<CustomField>
    <fullName>DropShipIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop Ship Indicator</label>
    <type>Checkbox</type>
</CustomField>