force-app/main/default/objects/SapVistexAgreement__c/fields/EligabilityEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EligabilityEffectiveDate__c</fullName>
    <label>Eligability Effective Date</label>
    <type>Date</type>
</CustomField>