force-app/main/default/objects/SapVistexAgreement__c/fields/EligabilityExpireDate__c.field-meta.xml
<CustomField>
    <fullName>EligabilityExpireDate__c</fullName>
    <label>Eligability Expire Date</label>
    <type>Date</type>
</CustomField>