force-app/main/default/objects/SapVistexAgreement__c/fields/External_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Description__c</fullName>
    <label>External Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>