force-app/main/default/objects/SapVistexAgreement__c/fields/IndirectAccountLookup__c.field-meta.xml
<CustomField>
    <fullName>IndirectAccountLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Agreements (Customer Name)</relationshipLabel>
    <relationshipName>Pricing_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>