force-app/main/default/objects/SapVistexAgreement__c/fields/LastApiSourceApplication__c.field-meta.xml
<CustomField>
    <fullName>LastApiSourceApplication__c</fullName>
    <label>Last Api Source Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>