force-app/main/default/objects/SapVistexAgreement__c/fields/LastApiTargetApplication__c.field-meta.xml
<CustomField>
    <fullName>LastApiTargetApplication__c</fullName>
    <label>Last Api Target Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>