force-app/main/default/objects/SapVistexAgreement__c/fields/LockGrid__c.field-meta.xml
<CustomField>
    <fullName>LockGrid__c</fullName>
    <label>Lock Grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>