force-app/main/default/objects/SapVistexAgreement__c/fields/OmitProposalProtection__c.field-meta.xml
<CustomField>
    <fullName>OmitProposalProtection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omit Proposal Protection</label>
    <type>Checkbox</type>
</CustomField>