force-app/main/default/objects/SapVistexAgreement__c/fields/Sales_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_ID__c</fullName>
    <formula>DirectAccountLookup__r.Sales_Organization__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organization ID</label>
    <type>Text</type>
</CustomField>