force-app/main/default/objects/SapVistexAgreement__c/fields/SapChangeReasonCode__c.field-meta.xml
<CustomField>
    <fullName>SapChangeReasonCode__c</fullName>
    <label>Sap Change Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>