force-app/main/default/objects/SapVistexAgreement__c/fields/SapCreateDate__c.field-meta.xml
<CustomField>
    <fullName>SapCreateDate__c</fullName>
    <label>Sap Create Date</label>
    <type>DateTime</type>
</CustomField>