force-app/main/default/objects/SapVistexAgreement__c/fields/SapExpireDate__c.field-meta.xml
<CustomField>
    <fullName>SapExpireDate__c</fullName>
    <label>Sap Expire Date</label>
    <type>DateTime</type>
</CustomField>