force-app/main/default/objects/SapVistexAgreement__c/fields/SapInquiryOnly__c.field-meta.xml
<CustomField>
    <fullName>SapInquiryOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sap Inquiry Only</label>
    <type>Checkbox</type>
</CustomField>