force-app/main/default/objects/SapVistexAgreement__c/fields/SapIntegrationNumber__c.field-meta.xml
<CustomField>
    <fullName>SapIntegrationNumber__c</fullName>
    <label>Sap Integration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>