force-app/main/default/objects/SapVistexAgreement__c/fields/SapLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>SapLastModifiedDate__c</fullName>
    <label>Sap Last Modified Date</label>
    <type>DateTime</type>
</CustomField>