force-app/main/default/objects/SapVistexAgreement__c/fields/SapSyncErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SapSyncErrorMessage__c</fullName>
    <label>Sap Sync Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>