force-app/main/default/objects/SapVistexAgreement__c/fields/SapSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SapSyncStatus__c</fullName>
    <label>Sap Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synchronization In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>