force-app/main/default/objects/SapVistexAgreement__c/fields/SeDirectAccount__c.field-meta.xml
<CustomField>
    <fullName>SeDirectAccount__c</fullName>
    <label>Se Direct Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>