force-app/main/default/objects/SapVistexAgreement__c/fields/SeInDirectAccount__c.field-meta.xml
<CustomField>
    <fullName>SeInDirectAccount__c</fullName>
    <label>SE Indirect Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>