force-app/main/default/objects/SapVistexAgreement__c/fields/SPARequestId__c.field-meta.xml
<CustomField>
    <fullName>SPARequestId__c</fullName>
    <label>SPA Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>