force-app/main/default/objects/SapVistexAgreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgreementEffectiveDate__c</columns>
    <columns>CurrencyIsoCode__c</columns>
    <columns>IndirectAccountLookup__c</columns>
    <columns>DropShipAdjustmentFactor__c</columns>
    <columns>External_Description__c</columns>
    <columns>AgreementType__c</columns>
    <columns>DirectAccountLookup__c</columns>
    <columns>SapAgreementNumber__c</columns>
    <columns>SPARequestId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>